--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Tunis (Tunisia) -- Fiction'
 - !lcsh 'Princesses -- Fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: 'The Princess And The Jewel Doctor
 
   1905'
